# termaid-platform

./: .env.example  .gitignore  0001_initial.py  AI_Brain_Agent_Kit.md  AI_Brain_START_PROMPT.txt  ARCHITECTURE.md  Auth_Security_Agent_Kit.md  Auth_Security_START_PROMPT.txt  BRAINSTORM_TEMPLATE.md  BUILD_LOCAL_APP.md  Backend_Core_Agent_Kit.md  Backend_Core_START_PROMPT.txt  CLAUDE_TOOLS.md  CODE_STYLE.md  CUSTOM_INSTRUCTIONS.txt  Cargo.toml  Database_Agent_Kit.md  Database_START_PROMPT.txt  Deploy_CICD_Agent_Kit.md  Deploy_CICD_Code.md  Deploy_CICD_START_PROMPT.txt  Desktop_Mobile_Agent_Kit.md  Desktop_Mobile_Code.md  Desktop_Mobile_START_PROMPT.txt  Dockerfile  Frontend_Agent_Kit.md  Frontend_Code.md  Frontend_START_PROMPT.txt  GAME_PLAN.md  GLOSSARY.md  HANDBACK_TEXT_PROTOCOL.md  HANDOFF_TEMPLATE.md  HEALTH_REPORT_TEMPLATE.md  HISTORY.md  IDEAS_BACKLOG.md  Knowledge_Learning_Agent_Kit.md  Knowledge_Learning_Code.md  Knowledge_Learning_START_PROMPT.txt  LESSONS.md  MASTER_INDEX.md  (+67 more)
backend/: ai_stream.py  auth.py  database.py  engine.py  fetch_cli.py  key_vault.py  logging_config.py  main.py  models.py  policy.py  providers_extra.py  requirements.txt  schemas.py  settings.py  test_api.py  test_native.py  test_policy.py  test_stream_parser.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: api.ts  (+6 more)
mnt/user-data/outputs/termaid-platform/desktop-mobile/src-tauri/: Cargo.toml
mnt/user-data/outputs/termaid-platform/desktop-mobile/src-tauri/binaries/: README.md
mnt/user-data/outputs/termaid-platform/desktop-mobile/src-tauri/src/: lib.rs  main.rs
native/: Cargo.toml
(+158 files in other folders)
